# pyosmoctrl

./: README.md  pyproject.toml
.github/workflows/: build_wheel.yml
src/pyosmoctrl/: __init__.py  osmoctrl.py
