[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pyosmoctrl"
version = "0.0.2"
authors = [
  { name="dwilliamsuk", email="public-mail@dwilliams.uk" },
]
description = "A package that aims to simplify interaction with the Osmocom Control Interface in Python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dwilliamsuk/pyosmoctrl"
Issues = "https://github.com/dwilliamsuk/pyosmoctrl/issues"
